HIG-91: Fixes responsiveness on larger screens (#294)
* Change to grid

* Adds center panel alignments

* Make padding response

* Remove extra rows

* Add grid layout with session scrolling

* Hide scrollbar

* Fix responsive bugs

* Remove header placeholder

* Fix alignment

* Remove unused imports

* Make left and right panel have their own scrolls

* Fix player scrollbars

* Hide scrollbar

* Move skeleton

* Remove unused div

* Fix scroll

* fix scroll issue

--- a/frontend/src/Common.module.scss
+++ b/frontend/src/Common.module.scss
@@ -13,6 +13,7 @@
 
 .bodyWrapper {
     width: 100%;
+    height: 100%;
 }
 
 .submitButton {
