--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -10,7 +10,7 @@
 }
 
 .billingPage {
-    margin: 40px 80px 80px 80px;
+    margin: 120px 80px 80px 80px;
     min-width: 650px;
 }
 
